--- a/aboutUs.html
+++ b/aboutUs.html
@@ -127,13 +127,13 @@
                 </div>
                 <div class="flex m-auto ab justify-center lg:mt-16 mt-8">
                     <a href="https://www.instagram.com/adaroagro/">
-                        <img src="./assets/img/AboutUs/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-125 duration-300 m-auto">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376588322558022/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-125 duration-300 m-auto">
                     </a>
                     <a href="https://www.facebook.com/people/Adaro-Agro/100076914482887/">
-                        <img src="./assets/img/AboutUs/facebook2.png" alt="Facebook" class="w-9 mx-5 hover:scale-125 duration-300 m-auto">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376587957633084/facebook2.png" alt="Facebook" class="w-9 mx-5 hover:scale-125 duration-300 m-auto">
                     </a>
                     <a href="https://www.linkedin.com/company/pt-adaro-global-sinergi/">
-                        <img src="./assets/img/AboutUs/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-125 duration-300 m-auto">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376588725219338/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-125 duration-300 m-auto">
                     </a>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                 <div class="grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-4 w-full m-auto lg:mt-20 mt-10 justify-center">
                     <!-- Integrity -->
                     <div>
-                        <img src="./assets/img/AboutUs/Engineer.png" alt="Integrity" class="m-auto rounded-xl hover:scale-125 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376587752140830/Engineer.png" alt="Integrity" class="m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">INTEGRITY</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
@@ -161,7 +161,7 @@
                     <!-- Quality -->
                     <div>
                         <!-- Gambar -->
-                        <img src="./assets/img/AboutUs/Award.png" alt="" class=" m-auto rounded-xl hover:scale-125 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376587588546580/Award.png" alt="" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">QUALITY</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
@@ -172,7 +172,7 @@
                     <!-- Commitment -->
                     <div>
                         <!-- Gambar -->
-                        <img src="./assets/img/AboutUs/Partnership.png" alt="Commitment" class=" m-auto rounded-xl hover:scale-125 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376588989464646/Partnership.png" alt="Commitment" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">COMMITMENT</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
@@ -184,7 +184,7 @@
                     <!-- INNOVATION -->
                     <div>
                         <!-- Gambar -->
-                        <img src="./assets/img/AboutUs/Idea.png" alt="INNOVATION" class=" m-auto rounded-xl hover:scale-125 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376588125429761/Idea.png" alt="INNOVATION" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">INNOVATION</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
@@ -195,77 +195,65 @@
 
                 <div class="w-full h-full lg:mt-36 mt-10 mb-10 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Our Team</div>
                 <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-y-10 lg:mt-20 lg:px-72">
-                    <!-- Wapi -->
+                    <!-- Wahampi -->
                     <div class="hover:scale-110 duration-300">
-                        <img src="./assets/img/AboutUs/Photo Profil Edit Daffa.jpg" alt="Muhammad Hibatul Wafi" class="m-auto rounded-3xl w-72 duration-300">
+                        <img src="./assets/img/AboutUs//Photo Profil Edit wafi 2.jpg" alt="Muhammad Hibatul Wafi" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muhammad Hibatul Wafi Bin Rahmat</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
                             President Director
                         </div>
                         <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
                             <a href="https://www.instagram.com/mhibwafi/">
-                                <img src="./assets/img/AboutUs/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588322558022/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
                             </a>
                             <a href="https://www.linkedin.com/in/muhammad-hibatul-wafi-bin-rahmat-821561229/">
-                                <img src="./assets/img/AboutUs/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588725219338/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
                             </a>
                         </div>
                     </div>
                     
                     <!-- Dapot -->
                     <div class="hover:scale-110 duration-300">
-                        <img src="./assets/img/AboutUs/Photo Profil Edit Daffa.jpg" alt="Ahmad Daffa Muttaqin" class="m-auto rounded-3xl w-72 duration-300">
+                        <img src="./assets/img/AboutUs/Photo Profil Edit Daffa 4.jpg" alt="Ahmad Daffa Muttaqin" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Ahmad Daffa Muttaqin</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
                             Operating Director
                         </div>
                         <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
                             <a href="https://www.instagram.com/daffamuttaqin/">
-                                <img src="./assets/img/AboutUs/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588322558022/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
                             </a>
                             <a href="https://www.linkedin.com/in/ahmad-daffa-muttaqin-63a7b8228/">
-                                <img src="./assets/img/AboutUs/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588725219338/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
                             </a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Btn Collaborate -->
-                <div class="w-full absolute lg:mt-32 mt-10 ">
+                <div class="w-full absolute lg:mt-44 mt-16 ">
                     <div>
                         <a  href="https://api.whatsapp.com/send?phone=6282273776665" style="background-image: url(./assets/img/collaborate.png);" 
                             class="bg-greenAgro hover:bg-greenOurProduct text-white w-auto m-auto font-montserrat font-semibold lg:p-8 p-3 rounded-2xl lg:text-4xl md:text-2xl text-md bg-no-repeat bg-left hover:bg-opacity-80 duration-300">
                             Ready To Collaborate? <span class="font-extrabold">Contact Us Now</span>
                         </a>
-
-                        <!-- Support By -->
-                        <div class="lg:mt-28 md:mt-10 mt-10">
-                            <div class="lg:text-xl text-sm font-montserrat font-bold text-supportBy tracking-wide">
-                                Support By
-                            </div>
-                            <div class="flex w-full justify-center mt-3">
-                                <img class="mx-3 lg:h-24 h-10" src="./assets/img/Kementerian Perdagangan 1.png" alt="Kementrian Perdagangan">
-                                <img class="mx-3 lg:h-24 h-10" src="./assets/img/LOGO_ppei_foot 4.png" alt="PPEI">
-                                <img class="mx-3 lg:h-24 h-10" src="./assets/img/LOGO FTA 1.png" alt="FTA">
-                            </div>
-                        </div>
                     </div>
                     
                     <!-- Footer -->
-                    <div class="lg:mt-28 md:mt-10 mt-10 bg-bgNavbar">
+                    <div class="lg:mt-44 md:mt-10 mt-16 bg-bgNavbar">
                         <div class="w-full px-5">
                             <div class="text-white grid lg:grid-cols-4 md:grid-cols-4 grid-cols-1 grid-flow-row gap-1 gap-y-3 pb-8 w-full">
                                 <div class="mt-14">
                                     <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="h-16 m-auto pb-2">
-                                    <div class="flex m-auto justify-center mt-4">
+                                    <div class="flex m-autu justify-center mt-4">
                                         <a href="https://www.instagram.com/adaroagro/">
-                                            <img src="./assets/img/Instagram.png" alt="Instagram" class="w-8 mx-5 hover:w-9 duration-200">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721427021824/unknown.png" alt="Instagram" class="w-8 mx-5 hover:w-9 duration-200">
                                         </a>
                                         <a href="https://www.facebook.com/people/Adaro-Agro/100076914482887/">
-                                            <img src="./assets/img/facebook.png" alt="Facebook" class="w-8 mx-5 hover:w-9 duration-200">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721250873364/unknown.png" alt="Facebook" class="w-8 mx-5 hover:w-9 duration-200">
                                         </a>
                                         <a href="https://www.linkedin.com/company/pt-adaro-global-sinergi/">
-                                            <img src="./assets/img/linkedin.png" alt="Linkedin" class="w-8 mx-5 hover:w-9 duration-200">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721909383239/unknown.png" alt="Linkedin" class="w-8 mx-5 hover:w-9 duration-200">
                                         </a>
                                     </div>
                                 </div>
@@ -278,25 +266,25 @@
                                 </div>
                                 <div class="flex flex-col mt-14 font-poppins font-normal text-sm text-left">
                                     <div class="font-montserrat text-base font-extrabold pb-2">About Us</div>
-                                    <a href="/aboutUs.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
+                                    <a href="/index.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
                                     <a href="/index.html#products" class="w-fit text-sm hover:text-base duration-300">Products</a>
                                 </div>
                                 <div class="mt-14  w-fit">
                                     <div class="grid grid-cols-5 grid-flow-row gap-1">
                                         <div class="justify-self-start">
-                                            <img src="./assets/img/Location.png" alt="Location" class="w-7 m-auto">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
                                         </div>
                                         <div class="justify-self-start">
-                                            <img src="./assets/img/Whatsapp.png" alt="Whatsapp" class="w-8 m-auto">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             +62 822 7377 6665
                                         </div>
                                         <div class="justify-self-start">
-                                            <img src="./assets/img/Email.png" alt="Email" class="w-7 m-auto">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721036967956/unknown.png" alt="Email" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             support@adaroagro.com
