--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         </div>
     </header>
 
+    <!-- <div class="w-screen h-screen fixed right-0 bottom-0">
+        <img src="/assets/img/Adaro Agro.png" class="m-auto" alt="">
+    </div> -->
+
     <!-- Main Content -->
     <div class="h-full w-full">  
         <!-- Image Slider with swiper js -->
@@ -129,7 +133,7 @@
             <!-- Grid -->
             <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 lg:gap-2 w-full">
                 <div class="p-8 lg:px-28 ">
-                    <img src="./assets/img/container.jpg" alt="" class="lg:w-auto rounded-3xl">
+                    <img src="https://media.discordapp.net/attachments/927170767211360327/938377008285634570/container.jpg?width=1025&height=683" alt="" class="lg:w-auto rounded-3xl">
                 </div>
                 <div class="px-8 lg:py-8 lg:pr-28 flex flex-col justify-between bg-white">
                     <h1 class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">About Us</h1>
@@ -150,19 +154,19 @@
                 <div id="products" class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
-                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-4 gap-y-3 w-full mt-20">
+                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-4  w-full mt-20">
 
                     <!-- Betel Nut -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/Betel Nuts.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702369431105546/Betel_Nuts.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Betel Nut</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
-                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
+                            <a href="/betelNut.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -173,14 +177,14 @@
                     <!-- Cloves -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/Cloves.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702304260005908/Cloves.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cloves</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
-                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">Cloves are the aromatic dried flower buds of a tree. They are native to the <span class="text-gray-300">Maluku islands in Indonesia... </span></p>
+                            <a href="/cloves.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -191,14 +195,14 @@
                     <!-- Cinnamon Sticks -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/Cinnamon Sticks.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702303907688479/Cinnamon_Sticks.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cinnamon Sticks</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia bark (both powdered and in <span class="lg:text-gray-300 md:text-gray-300 text-blackText">whole, or <span class="lg:text-gray-300 text-gray-300">"stick" form) is...</span></span></p>
-                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia <span class="text-gray-300">bark (both powdered and...</span></p>
+                            <a href="/cinnamonStick.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -209,14 +213,14 @@
                     <!-- Nutmeg -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/Nutmeg.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702304624902164/Nutmeg.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Nutmeg</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia bark (both powdered and in <span class="lg:text-gray-300 md:text-gray-300 text-blackText">whole, or <span class="lg:text-gray-300 text-gray-300">"stick" form) is...</span></span></p>
-                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">Nutmeg is a spice made from the seed of the nutmeg tree, a native Indonesian <span class="text-gray-300">evergreen tree that is the...</span></p>
+                            <a href="/nutmeg.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -227,14 +231,14 @@
                     <!-- White Cardamom -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/White Cardamom.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702305023373322/White_Cardamom.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">White Cardamom</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
-                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
+                            <a href="/whiteCardamom.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -245,14 +249,14 @@
                     <!-- Black Papper -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/Black Papper.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702305463771156/Black_Papper.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Black Papper</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
-                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">This spice alone accounts for 35% of the world trade in spices. It is no surprise <span class="text-gray-300 lg:text-blackText md:text-blackText ">then </span><span class="text-gray-300 ">that black pepper is known...</span></span></p>
+                            <a href="/blackPepper.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -275,9 +279,9 @@
                                 Support By
                             </div>
                             <div class="flex w-full justify-center mt-3">
-                                <img class="mx-3 lg:h-24 h-10" src="./assets/img/Kementerian Perdagangan 1.png" alt="Kementrian Perdagangan">
-                                <img class="mx-3 lg:h-24 h-10" src="./assets/img/LOGO_ppei_foot 4.png" alt="PPEI">
-                                <img class="mx-3 lg:h-24 h-10" src="./assets/img/LOGO FTA 1.png" alt="FTA">
+                                <img class="mx-3 lg:h-24 h-10" src="https://media.discordapp.net/attachments/938374277751795743/938375721628336168/unknown.png" alt="Kementrian Perdagangan">
+                                <img class="mx-3 lg:h-24 h-10" src="https://media.discordapp.net/attachments/938374277751795743/938375722551095306/unknown.png" alt="PPEI">
+                                <img class="mx-3 lg:h-24 h-10" src="https://media.discordapp.net/attachments/938374277751795743/938375722345578506/unknown.png" alt="FTA">
                             </div>
                         </div>
                     </div>
@@ -290,13 +294,13 @@
                                     <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="h-16 m-auto pb-2">
                                     <div class="flex m-autu justify-center mt-4">
                                         <a href="https://www.instagram.com/adaroagro/">
-                                            <img src="./assets/img/Instagram.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721427021824/unknown.png" alt="Instagram" class="w-8 mx-5 hover:w-9 duration-200">
                                         </a>
                                         <a href="https://www.facebook.com/people/Adaro-Agro/100076914482887/">
-                                            <img src="./assets/img/facebook.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721250873364/unknown.png" alt="Facebook" class="w-8 mx-5 hover:w-9 duration-200">
                                         </a>
                                         <a href="https://www.linkedin.com/company/pt-adaro-global-sinergi/">
-                                            <img src="./assets/img/linkedin.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721909383239/unknown.png" alt="Linkedin" class="w-8 mx-5 hover:w-9 duration-200">
                                         </a>
                                     </div>
                                 </div>
@@ -309,25 +313,25 @@
                                 </div>
                                 <div class="flex flex-col mt-14 font-poppins font-normal text-sm text-left">
                                     <div class="font-montserrat text-base font-extrabold pb-2">About Us</div>
-                                    <a href="/aboutUs.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
+                                    <a href="/index.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
                                     <a href="/index.html#products" class="w-fit text-sm hover:text-base duration-300">Products</a>
                                 </div>
                                 <div class="mt-14  w-fit">
                                     <div class="grid grid-cols-5 grid-flow-row gap-1">
                                         <div class="justify-self-start">
-                                            <img src="./assets/img/Location.png" alt="Location" class="w-7 m-auto">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
                                         </div>
                                         <div class="justify-self-start">
-                                            <img src="./assets/img/Whatsapp.png" alt="Whatsapp" class="w-8 m-auto">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             +62 822 7377 6665
                                         </div>
                                         <div class="justify-self-start">
-                                            <img src="./assets/img/Email.png" alt="Email" class="w-7 m-auto">
+                                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721036967956/unknown.png" alt="Email" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             support@adaroagro.com
