--- a/gallery.html
+++ b/gallery.html
@@ -116,6 +116,7 @@
     <script src="./assets/js/gallery.js"></script>
 </body>
 
+<!-- Footer -->
 <body class="w-full h-full">
     <div class="lg:mt-28 md:mt-10 mt-10 bg-bgNavbar">
         <div class="w-full text-center px-5">
@@ -124,13 +125,13 @@
                     <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="h-16 m-auto pb-2">
                     <div class="flex m-autu justify-center mt-4">
                         <a href="https://www.instagram.com/adaroagro/">
-                            <img src="./assets/img/Instagram.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
+                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721427021824/unknown.png" alt="Instagram" class="w-8 mx-5 hover:w-9 duration-200">
                         </a>
                         <a href="https://www.facebook.com/people/Adaro-Agro/100076914482887/">
-                            <img src="./assets/img/facebook.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
+                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721250873364/unknown.png" alt="Facebook" class="w-8 mx-5 hover:w-9 duration-200">
                         </a>
                         <a href="https://www.linkedin.com/company/pt-adaro-global-sinergi/">
-                            <img src="./assets/img/linkedin.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
+                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721909383239/unknown.png" alt="Linkedin" class="w-8 mx-5 hover:w-9 duration-200">
                         </a>
                     </div>
                 </div>
@@ -143,25 +144,25 @@
                 </div>
                 <div class="flex flex-col mt-14 font-poppins font-normal text-sm text-left">
                     <div class="font-montserrat text-base font-extrabold pb-2">About Us</div>
-                    <a href="/aboutUs.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
+                    <a href="/index.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
                     <a href="/index.html#products" class="w-fit text-sm hover:text-base duration-300">Products</a>
                 </div>
                 <div class="mt-14  w-fit">
                     <div class="grid grid-cols-5 grid-flow-row gap-1">
                         <div class="justify-self-start">
-                            <img src="./assets/img/Location.png" alt="Location" class="w-7 m-auto">
+                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                             Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
                         </div>
                         <div class="justify-self-start">
-                            <img src="./assets/img/Whatsapp.png" alt="Whatsapp" class="w-8 m-auto">
+                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                             +62 822 7377 6665
                         </div>
                         <div class="justify-self-start">
-                            <img src="./assets/img/Email.png" alt="Email" class="w-7 m-auto">
+                            <img src="https://media.discordapp.net/attachments/938374277751795743/938375721036967956/unknown.png" alt="Email" class="w-7 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                             support@adaroagro.com
