--- a/index.html
+++ b/index.html
@@ -26,14 +26,21 @@
 </head>
 
 <body>
+    <!-- Floating Icon Whatsapp -->
+    <div class="w-full h-full block">
+        <a href="https://api.whatsapp.com/send?phone=6285171516102" class="fixed z-50 bottom-0 right-0 lg:mr-8 lg:mb-8 mr-4 mb-4 hover:scale-110 duration-300">
+            <img src="https://media.discordapp.net/attachments/927170767211360327/940186846875496478/unknown.png" alt="" class="w-16 md:w-16 lg:w-20">
+        </a>
+    </div>
+
     <!-- Navbar -->
     <header class="fixed w-full z-30 bg-bgNavbar shadow-md">
         <div class="container m-auto py-3 lg:py-4 lg:h-auto">
             <div class="flex flex-wrap items-center justify-between">
-                <div class="relative z-50 w-full flex items-center justify-between lg:w-auto">
+                <div class="relative w-full flex items-center justify-between lg:w-auto">
                     <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 lg:ml-4 ml-6 lg:pl-0 ">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 md:ml-28">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
@@ -70,7 +77,7 @@
                             </a>
                         </li>
                         <li class="mt-4 lg:mt-0">
-                            <a href="" class="block py-3 rounded w-full lg:w-full bg-greenContactUs hover:bg-bgNavbar focus:bg-bgNavbar active:bg-bgNavbar transition" >
+                            <a href="mailto:info@adaroagro.com" class="block py-3 rounded w-full lg:w-full bg-greenContactUs hover:bg-bgNavbar focus:bg-bgNavbar active:bg-bgNavbar transition" >
                                 <span class="block lg:px-5 font-semibold text-white font-poppins text-center">Contact Us</span>
                             </a>
                         </li>
@@ -81,23 +88,19 @@
         </div>
     </header>
 
-    <!-- <div class="w-screen h-screen fixed right-0 bottom-0">
-        <img src="/assets/img/Adaro Agro.png" class="m-auto" alt="">
-    </div> -->
-
     <!-- Main Content -->
     <div class="h-full w-full">  
         <!-- Image Slider with swiper js -->
         <div class="swiper w-full">
             <!-- Additional required wrapper -->
-            <!-- ADARO AGRO -->
-            <div id="info" class="z-40 absolute top-1/2 left-1/2 -translate-x-1/2">
+            <div id="info" class="z-40 absolute lg:top-1/3 top-1/2 left-1/2 -translate-x-1/2">
+                <!-- ADARO AGRO -->
               <h2 class="text-white font-montserrat font-medium lg:text-6xl md:text-3xl text-xl lg:ml-0 md:ml-5 ml-2 uppercase tracking-wide">ADARO AGRO</h2>
               <div class="flex py-4 w-full justify-center">
                   <!-- Garis hijau dibawah ADARO AGRO -->
                   <div class="inset-0 lg:h-1 h-0.5 rounded lg:w-16 md:w-8 w-4 bg-greenContactUs"></div>
               </div>
-              <p class="lg:text-3xl md:text-xl text-xs text-white font-montserrat font-thin lg:px-12 md:px-6 px-2 "> <em>"We bring local farmer <br> products to the world"</em></p>
+              <p class="lg:text-3xl md:text-xl text-xs text-white font-montserrat font-medium lg:px-12 md:px-6 px-2 "> <em>"We bring local farmer <br> products to the world"</em></p>
             </div>
             <div class="swiper-wrapper mt-16 lg:mt-20 z-40">
               <!-- Slides 1 -->
@@ -120,8 +123,8 @@
             <div class="swiper-pagination"></div>
           
             <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <!-- <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div> -->
           
             <!-- If we need scrollbar -->
             <div class="swiper-scrollbar"></div>
@@ -136,12 +139,12 @@
                     <img src="https://media.discordapp.net/attachments/927170767211360327/938377008285634570/container.jpg?width=1025&height=683" alt="" class="lg:w-auto rounded-3xl">
                 </div>
                 <div class="px-8 lg:py-8 lg:pr-28 flex flex-col justify-between bg-white">
-                    <h1 class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">About Us</h1>
-                    <p class="text-blackText font-poppins lg:text-2xl md:text-xl text-sm text-justify leading-8">PT Adaro Global Sinergi (Adaro Agro) is a company engaged in the export trade which currently focuses on agricultural products.</p>
-                    <p class="text-blackText font-poppins lg:text-2xl md:text-xl text-sm text-justify leading-8">We are proud to be able to provide supplies of Indonesian agricultural products from local farmers and other agricultural commodities to meet 
+                    <h1 class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">About Us</h1> <br>
+                    <p class="text-blackText font-poppins lg:text-xl md:text-base text-sm text-justify leading-8">PT Adaro Global Sinergi (Adaro Agro) is a company engaged in the export trade which currently focuses on agricultural products.</p> <br>
+                    <p class="text-blackText font-poppins lg:text-xl md:text-base text-sm text-justify leading-8">We are proud to be able to provide supplies of Indonesian agricultural products from local farmers and other agricultural commodities to meet 
                        individual client needs. We not just supply a product to you but also we supply a collection of values including trust, satisfaction, credit, and 
                        quality to you.
-                    </p>
+                    </p> <br>
                     <!-- Btn More Information -->
                     <a href="./aboutUs.html" class="text-white text-center font-montserrat font-extrabold bg-greenAgro hover:bg-greenOurProduct p-4 rounded-lg duration-300">MORE INFORMATION</a>
                 </div>
@@ -165,7 +168,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Betel Nut</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
                             <a href="/betelNut.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -183,7 +186,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cloves</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">Cloves are the aromatic dried flower buds of a tree. They are native to the <span class="text-gray-300">Maluku islands in Indonesia... </span></p>
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Cloves are the aromatic dried flower buds of a tree. They are native to the <span class="text-gray-300">Maluku islands in Indonesia... </span></p>
                             <a href="/cloves.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -201,7 +204,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cinnamon Sticks</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia <span class="text-gray-300">bark (both powdered and...</span></p>
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia <span class="text-gray-300">bark (both powdered and...</span></p>
                             <a href="/cinnamonStick.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -219,7 +222,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Nutmeg</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">Nutmeg is a spice made from the seed of the nutmeg tree, a native Indonesian <span class="text-gray-300">evergreen tree that is the...</span></p>
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Nutmeg is a spice made from the seed of the nutmeg tree, a native Indonesian <span class="text-gray-300">evergreen tree that is the...</span></p>
                             <a href="/nutmeg.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -237,7 +240,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">White Cardamom</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
                             <a href="/whiteCardamom.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -255,7 +258,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Black Papper</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-xl text-sm lg:leading-relaxed">This spice alone accounts for 35% of the world trade in spices. It is no surprise <span class="text-gray-300 lg:text-blackText md:text-blackText ">then </span><span class="text-gray-300 ">that black pepper is known...</span></span></p>
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">This spice alone accounts for 35% of the world trade in spices. It is no surprise <span class="text-gray-300 lg:text-blackText md:text-blackText ">then </span><span class="text-gray-300 ">that black pepper is known...</span></span></p>
                             <a href="/blackPepper.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -268,7 +271,7 @@
                 <!-- Btn Collaborate -->
                 <div class="w-full absolute lg:mt-20 mt-10 ">
                     <div>
-                        <a  href="https://api.whatsapp.com/send?phone=6282273776665" style="background-image: url(./assets/img/collaborate.png);" 
+                        <a  href="https://api.whatsapp.com/send?phone=6285171516102" style="background-image: url(./assets/img/collaborate.png);" 
                             class="bg-greenAgro hover:bg-greenOurProduct text-white w-auto m-auto font-montserrat font-semibold lg:p-8 p-3 rounded-2xl lg:text-4xl md:text-2xl text-md bg-no-repeat bg-left hover:bg-opacity-80 duration-300">
                             Ready To Collaborate? <span class="font-extrabold">Contact Us Now</span>
                         </a>
@@ -328,13 +331,13 @@
                                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                                            +62 822 7377 6665
+                                            +62 851 7151 6102
                                         </div>
                                         <div class="justify-self-start">
                                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375721036967956/unknown.png" alt="Email" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                                            support@adaroagro.com
+                                            info@adaroagro.com
                                         </div>
                                         <div></div>
                                         <div class="text-greenAgro font-poppins font-normal text-sm text-left col-span-4 hover:scale-110 duration-300">
